# Clipboardshare

./: .gitignore  CMakeLists.txt  Readme.md
ClipboardShare/: CMakeLists.txt  ClipboardShare.cpp  ClipboardShare.h
ClipboardShare/Bridge/: SysBridge.cpp  SysBridge.h
ClipboardShare/Connector/: AConnector.h  AnswerType.h  LinConn.cpp  LinConn.h  MessageType.h  WinConn.cpp  WinConn.h
ClipboardShare/Data/: DataHandler.cpp  DataHandler.h
ClipboardShare/Ui/: CliView  CliView.cpp  CliView.h
